# receipt-review-software

./: .gitignore  main.py  pyproject.toml
ddd/: architecture.md
src/app/: main.py
src/app/api/: client.py  mock_client.py  mock_data.py  routes.py
src/app/config/: env.py  settings_io.py  status_colors.py  theme.py
src/app/models/: constants.py  types.py
src/app/services/: receipts_service.py
src/app/ui/: detail_panel.py  image_viewer.py  main_window.py  sidebar.py  ui_utils.py
src/app/ui/tabs/: tab_autocomplete.py  tab_dups.py  tab_export_csv.py  tab_final_edit.py  tab_list.py  tab_quality.py  tab_settings.py  tab_upload.py
src/app/ui/widgets/: __init__.py  thumbnail_tile.py  tile_view.py
tests/: conftest.py  test_api_client.py  test_receipts_service.py  test_tab_functions.py  test_ui_utils.py
tests/mocks/: mock_api_client.py  mock_data.py
